<resources>
    <string name="app_name">AppNew</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!!!</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="title_activity_sub">EventActivity</string>
    <string name="title_activity_navigation_drawer_fragment">NavigationDrawerFragment</string>
    <string name="sig_motion_unavailable">The Significant Motion sensor is not available on this device.</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="add_title">Add Event</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="ok">Ok</string>
    <string name="title_activity_display_message"></string>
    <string name="title_activity_sign_up">SignUpActivity</string>

    <string name="edit_username">Username</string>
    <string name="edit_password">Password</string>
    <string name="button_login">LOGIN</string>
    <string name="button_signup">SIGNUP</string>

    <string name="signup_username">Username</string>
    <string name="signup_password">Password</string>
    <string name="signup_confirmpassword">Confirm Password</string>
    <string name="signup_mailid">Mail ID</string>
    <string name="button_submit">SUBMIT</string>

    <string name="button_startService">Start Service</string>
    <string name="button_stopService">Stop Service</string>
    <string name="button_chooseTime">Choose Time</string>
    <string name="title_activity_config">ConfigActivity</string>
    <string name="dash"> - </string>
    <string name="confirm">confirm</string>
    <string name="setting_every_day">every_day_service</string>
    <string name="set_mode_service">mode_setter</string>

    <string name="startMode">StartAlarm-</string>
    <string name="stopMode">StopAlarm+</string>
    <string name="title_activity_driving">DrivingActivity</string>

</resources>
