<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true" />

    <EditText android:id="@+id/edit_username"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_username"/>

    <EditText android:id="@+id/edit_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_login"
            android:onClick="sendLoginMessage"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_signup"
            android:onClick="sendSignUpMessage"/>

    </LinearLayout>

</LinearLayout>
