<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="com.app.raghavbabu.myapp.activity.ConfigActivity">


    <Button android:id="@+id/button_startService"
        android:text="@string/button_startService"
        android:paddingLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startService" />

    <Button android:id="@+id/button_stopService"
        android:text="@string/button_stopService"
        android:paddingLeft="20dp"
        android:paddingTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="stopService"
        android:layout_below="@+id/button_startService"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <Button android:id="@+id/button_chooseTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="chooseTime"
        android:text="@string/button_chooseTime"
        android:layout_below="@+id/button_stopService"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
